testsuite/tests/indexed-types/should_fail/T2693.stderr

T2693.hs:12:15: error:
    • Couldn't match expected type: (a8, b1)
                  with actual type: TFn a6
      The type variable ‘a6’ is ambiguous
    • In the first argument of ‘fst’, namely ‘x’
      In the first argument of ‘(+)’, namely ‘fst x’
      In the expression: fst x + fst x
    • Relevant bindings include n :: a8 (bound at T2693.hs:12:7)

T2693.hs:12:23: error:
    • Couldn't match expected type: (a8, b2)
                  with actual type: TFn a7
      The type variable ‘a7’ is ambiguous
    • In the first argument of ‘fst’, namely ‘x’
      In the second argument of ‘(+)’, namely ‘fst x’
      In the expression: fst x + fst x
    • Relevant bindings include n :: a8 (bound at T2693.hs:12:7)

T2693.hs:19:15: error:
    • Couldn't match expected type: (a5, b0)
                  with actual type: TFn a2
      The type variable ‘a2’ is ambiguous
    • In the first argument of ‘fst’, namely ‘x’
      In the first argument of ‘(+)’, namely ‘fst x’
      In the expression: fst x + snd x
    • Relevant bindings include n :: a5 (bound at T2693.hs:19:7)

T2693.hs:19:23: error:
    • Couldn't match expected type: (a4, a5)
                  with actual type: TFn a3
      The type variable ‘a3’ is ambiguous
    • In the first argument of ‘snd’, namely ‘x’
      In the second argument of ‘(+)’, namely ‘snd x’
      In the expression: fst x + snd x
    • Relevant bindings include n :: a5 (bound at T2693.hs:19:7)

T2693.hs:29:20: error:
    • Couldn't match type: TFn a0
                     with: PVR a1
      Expected: () -> Maybe (PVR a1)
        Actual: () -> Maybe (TFn a0)
      The type variable ‘a0’ is ambiguous
    • In the first argument of ‘mapM’, namely ‘g’
      In a stmt of a 'do' block: pvs <- mapM g undefined
      In the expression:
        do pvs <- mapM g undefined
           let n = (map pvrX pvs) `min` (map pvrX pvs)
           undefined
